fix distorting image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -183,7 +183,7 @@ section {
 .home .landing .images-container .image-noise {
   position: relative;
   bottom: 30px;
-  left: 30px;
+  /* left: 30px; */
   margin-left: auto;
   margin-right: auto;
 }
